--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cleanup": "rm -rf .next"
   },
   "dependencies": {
+    "@hotjar/browser": "^1.0.9",
     "@storyblok/react": "^1.0.8",
     "@svgr/webpack": "^6.3.1",
     "concurrently": "^7.3.0",
