--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "lazysizes": "^5.3.2",
     "local-ssl-proxy": "^1.3.0",
     "lodash": "^4.17.21",
-    "next": "^12.1.6",
+    "next": "^15.0.4",
     "pure-react-carousel": "^1.29.0",
-    "react": "18.2.0",
+    "react": "^19.0.0",
     "react-carousel": "^4.3.0",
     "react-collapsible": "^2.10.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.0.0",
     "react-hotjar": "^5.2.0",
     "react-lottie-player": "^1.4.3",
     "react-player": "^2.10.1",
