--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "concurrently": "^7.3.0",
     "js-cookie": "^3.0.1",
     "lazysizes": "^5.3.2",
-    "local-ssl-proxy": "^2.0.5",
+    "local-ssl-proxy": "^1.3.0",
     "lodash": "^4.17.21",
-    "next": "^15.1.0",
+    "next": "^12.1.6",
     "pure-react-carousel": "^1.29.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-carousel": "^4.3.0",
     "react-collapsible": "^2.10.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hotjar": "^5.2.0",
     "react-lottie-player": "^1.4.3",
     "react-player": "^2.10.1",
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "axios": "^1.7.9",
+    "axios": "^0.21.4",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "sass": "^1.54.8"
