--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint",
     "proxy": "mkcert -install && mkcert localhost && local-ssl-proxy --source 3010 --target 3000 --cert localhost.pem --key localhost-key.pem",
     "devproxy": "concurrently --kill-others \"npm run proxy\" \"npm run dev\"",
-    "cleanup": "rm -rf .next",
-    "postinstall": "prisma generate"
+    "cleanup": "rm -rf .next"
   },
   "dependencies": {
     "@hotjar/browser": "^1.0.9",
@@ -22,6 +21,7 @@
     "local-ssl-proxy": "^1.3.0",
     "lodash": "^4.17.21",
     "next": "^13.4.3",
+    "prisma": "^6.0.1",
     "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
     "react-carousel": "^4.3.0",
