--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "axios": "^0.21.4",
+    "eslint": "^8.22.0",
     "sass": "^1.54.8"
   }
 }
