--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@storyblok/react": "^1.0.8",
     "@svgr/webpack": "^6.3.1",
     "concurrently": "^7.3.0",
+    "eslint": "^8.57.1",
     "js-cookie": "^3.0.1",
     "lazysizes": "^5.3.2",
     "local-ssl-proxy": "^1.3.0",
